Fri Jan  8 17:07:14 2016  Koichi Sasada  <ko1@atdot.net>

	* gc.c: remove heap_page::heap. This field is only used to recognize
	  whether a page is in a tomb or not. Instead of this field,
	  heap_page::flags::in_tomb (1 bit field) is added.

	  Also type of heap_page::(total|free|final)_slots are changed from
	  int to short. 2B is enough for them.

Fri Jan  8 12:30:54 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* tool/make-snapshot: fix for the changes of version.h in r53314.

Fri Jan  8 09:33:59 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* iseq.c (rb_iseq_compile_with_option): move variable initialization
	  code to avoid maybe-uninitialized warnings by gcc 4.8.

Fri Jan  8 00:03:22 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* enum.c (enum_min, enum_max): do the same optimization as r53454.

Thu Jan  7 22:32:21 2016  Kenta Murata  <mrkn@mrkn.jp>

	* ruby.h: undef HAVE_BUILTIN___BUILTIN_CHOOSE_EXPR_CONSTANT_P
	  and HAVE_BUILTIN___BUILTIN_TYPES_COMPATIBLE_P on C++.
	  [ruby-core:72736] [Bug #11962]

Thu Jan  7 22:02:21 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* enum.c (enum_minmax): optimize object comparison in
	  Enumerable#minmax.

Thu Jan  7 14:49:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_pending_interrupt_p): no pending interrupt
	  before initialization.

	* thread.c (thread_raise_m, rb_thread_kill): uninitialized thread
	  cannot interrupt.  [ruby-core:72732] [Bug #11959]

Thu Jan  7 11:34:14 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/backward.h (ruby_show_copyright_to_die): for source
	  code backward compatibility.

	* ruby.c (process_options): return Qtrue to exit the process
	  successfully.

	* version.c (ruby_show_copyright): no longer exit.

Wed Jan  6 17:22:53 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#order!): add `into` optional
	  keyword argument to store the results.  [Feature #11191]

Tue Jan  5 21:44:37 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
