@@ -1,3 +1,10 @@
+Fri Jan  8 19:31:52 2016  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c: rename rb_heap_t::page_length to rb_heap_t::total_pages.
+
+	  `page_length' is not clear (we may understand with length of
+	  a page).
+
 Fri Jan  8 17:07:14 2016  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: remove heap_page::heap. This field is only used to recognize
